// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionGroup collapsible header doesn't render the icon when set to not visible 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group widget-accordion-group-collapsed class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="false"
        aria-expanded="false"
        class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
        tabindex="0"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <span>
          content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup collapsible renders correctly when the group becomes visible and is collapsed 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group widget-accordion-group-collapsed class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="false"
        aria-expanded="false"
        class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
        tabindex="0"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <span>
          content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup collapsible renders correctly when the group becomes visible and is expanded 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group widget-accordion-group-collapsed class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="false"
        aria-expanded="false"
        class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
        tabindex="0"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <span>
          content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup collapsible renders correctly when the group is visible and collapsed 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group widget-accordion-group-collapsed class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="false"
        aria-expanded="false"
        class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
        tabindex="0"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <span>
          content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup collapsible renders correctly when the group is visible and expanded 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="false"
        aria-expanded="true"
        class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
        tabindex="0"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <span>
          content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup collapsible renders correctly when the group is visible and gets collapsed 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group widget-accordion-group-collapsed class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="false"
        aria-expanded="false"
        class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
        tabindex="0"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <span>
          content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup collapsible renders correctly when the group is visible and gets expanded 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="false"
        aria-expanded="true"
        class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
        tabindex="0"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <span>
          content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup doesn't render when the group isn't visible 1`] = `<DocumentFragment />`;

exports[`AccordionGroup loadContent behaviour doesn't render widgets when 'loadContent' is set 'whenExpanded' 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group widget-accordion-group-collapsed class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="false"
        aria-expanded="false"
        class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
        tabindex="0"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup loadContent behaviour renders widgets when 'loadContent' is set 'always' 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group widget-accordion-group-collapsed class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="false"
        aria-expanded="false"
        class="widget-accordion-group-header-button widget-accordion-group-header-button-clickable widget-accordion-group-header-button-icon-right"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
        tabindex="0"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <div>
          Widgets
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup not collapsible renders the content when the group becomes visible dynamically 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="true"
        aria-expanded="true"
        class="widget-accordion-group-header-button"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <span>
          content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AccordionGroup not collapsible renders the content when the group is visible and not collapsed 1`] = `
<DocumentFragment>
  <section
    class="widget-accordion-group class-name"
  >
    <header
      class="widget-accordion-group-header"
    >
      <div
        aria-controls="idContentWrapper"
        aria-disabled="true"
        aria-expanded="true"
        class="widget-accordion-group-header-button"
        data-focusindex="0"
        id="idHeaderButton"
        role="button"
      >
        header
      </div>
    </header>
    <div
      aria-labelledby="idHeaderButton"
      class="widget-accordion-group-content-wrapper"
      data-focusindex="0"
      id="idContentWrapper"
      role="region"
    >
      <div
        class="widget-accordion-group-content"
      >
        <span>
          content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
